tests/machine/x/cs/dataset_where_filter.error
run: exit status 1
/tmp/TestCSCompiler_VMValid_Goldendataset_where_filter.mochi2932148761/001/Program.cs(10,41): error CS1950: The best overloaded Add method 'List<Program.People>.Add(Program.People)' for the collection initializer has some invalid arguments [/tmp/TestCSCompiler_VMValid_Goldendataset_where_filter.mochi2932148761/001/app.csproj]
/tmp/TestCSCompiler_VMValid_Goldendataset_where_filter.mochi2932148761/001/Program.cs(10,41): error CS1503: Argument 1: cannot convert from 'System.Collections.Generic.Dictionary<string, dynamic>' to 'Program.People' [/tmp/TestCSCompiler_VMValid_Goldendataset_where_filter.mochi2932148761/001/app.csproj]
/tmp/TestCSCompiler_VMValid_Goldendataset_where_filter.mochi2932148761/001/Program.cs(10,113): error CS1950: The best overloaded Add method 'List<Program.People>.Add(Program.People)' for the collection initializer has some invalid arguments [/tmp/TestCSCompiler_VMValid_Goldendataset_where_filter.mochi2932148761/001/app.csproj]
/tmp/TestCSCompiler_VMValid_Goldendataset_where_filter.mochi2932148761/001/Program.cs(10,113): error CS1503: Argument 1: cannot convert from 'System.Collections.Generic.Dictionary<string, dynamic>' to 'Program.People' [/tmp/TestCSCompiler_VMValid_Goldendataset_where_filter.mochi2932148761/001/app.csproj]
/tmp/TestCSCompiler_VMValid_Goldendataset_where_filter.mochi2932148761/001/Program.cs(10,183): error CS1950: The best overloaded Add method 'List<Program.People>.Add(Program.People)' for the collection initializer has some invalid arguments [/tmp/TestCSCompiler_VMValid_Goldendataset_where_filter.mochi2932148761/001/app.csproj]
/tmp/TestCSCompiler_VMValid_Goldendataset_where_filter.mochi2932148761/001/Program.cs(10,183): error CS1503: Argument 1: cannot convert from 'System.Collections.Generic.Dictionary<string, dynamic>' to 'Program.People' [/tmp/TestCSCompiler_VMValid_Goldendataset_where_filter.mochi2932148761/001/app.csproj]
/tmp/TestCSCompiler_VMValid_Goldendataset_where_filter.mochi2932148761/001/Program.cs(10,257): error CS1950: The best overloaded Add method 'List<Program.People>.Add(Program.People)' for the collection initializer has some invalid arguments [/tmp/TestCSCompiler_VMValid_Goldendataset_where_filter.mochi2932148761/001/app.csproj]
/tmp/TestCSCompiler_VMValid_Goldendataset_where_filter.mochi2932148761/001/Program.cs(10,257): error CS1503: Argument 1: cannot convert from 'System.Collections.Generic.Dictionary<string, dynamic>' to 'Program.People' [/tmp/TestCSCompiler_VMValid_Goldendataset_where_filter.mochi2932148761/001/app.csproj]
/tmp/TestCSCompiler_VMValid_Goldendataset_where_filter.mochi2932148761/001/Program.cs(11,46): error CS0021: Cannot apply indexing with [] to an expression of type 'Program.People' [/tmp/TestCSCompiler_VMValid_Goldendataset_where_filter.mochi2932148761/001/app.csproj]
/tmp/TestCSCompiler_VMValid_Goldendataset_where_filter.mochi2932148761/001/Program.cs(20,23): warning CS0649: Field 'Program.People.name' is never assigned to, and will always have its default value null [/tmp/TestCSCompiler_VMValid_Goldendataset_where_filter.mochi2932148761/001/app.csproj]
/tmp/TestCSCompiler_VMValid_Goldendataset_where_filter.mochi2932148761/001/Program.cs(21,20): warning CS0649: Field 'Program.People.age' is never assigned to, and will always have its default value 0 [/tmp/TestCSCompiler_VMValid_Goldendataset_where_filter.mochi2932148761/001/app.csproj]

The build failed. Fix the build errors and run again.
