tests/machine/x/cs/dataset_where_filter.cs
// Generated by Mochi compiler v0.10.27 on 1970-01-01T00:00:00Z
using System;
using System.Collections.Generic;
using System.Linq;

class Program
{
    static void Main()
    {
        var people = new List<People> { new Dictionary<string, dynamic> { { "name", "Alice" }, { "age", 30 } }, new Dictionary<string, dynamic> { { "name", "Bob" }, { "age", 15 } }, new Dictionary<string, dynamic> { { "name", "Charlie" }, { "age", 65 } }, new Dictionary<string, dynamic> { { "name", "Diana" }, { "age", 45 } } };
        var adults = people.Where(person => (person["age"] >= 18)).Select(person => new Dictionary<string, dynamic> { { "name", person["name"] }, { "age", person["age"] }, { "is_senior", (person["age"] >= 60) } }).ToList();
        Console.WriteLine("--- Adults ---");
        foreach (var person in adults)
        {
            Console.WriteLine(string.Join(" ", new[] { Convert.ToString(person["name"]), Convert.ToString("is"), Convert.ToString(person["age"]), Convert.ToString((person["is_senior"] ? " (senior)" : "")) }));
        }
    }
    public class People
    {
        public string name;
        public int age;
    }


}
